# pbrt-v4-zh

./: .gitignore  .gitmodules  README.md  about_me.typ  about_the_authors.typ  bibliography.bib  main.typ  references.yaml  template.typ
Appendix-A-Sampling_Algorithms/: A.0-Sampling_Algorithms.typ  A.1-The_Alias_Method.typ  A.2-Reservoir_Sampling.typ  A.3-The_Rejection_Method.typ  A.4-Sampling_1D_Functions.typ  A.5-Sampling_Multidimensional_Functions.typ
Appendix-B-Utilities/: B.0-Utilities.typ  B.1-System_Startup,_Cleanup,_and_Options.typ  B.2-Mathematical_Infrastructure.typ  B.3-User_Interaction.typ  B.4-Containers_and_Memory_Management.typ  B.5-Images.typ  B.6-Parallelism.typ  B.7-Statistics.typ
Appendix-C-Processing_the_Scene_Description/: C.0-Processing_the_Scene_Description.typ  C.1-Tokenizing_and_Parsing.typ  C.2-Managing_the_Scene_Description.typ  C.3-BasicScene_and_Final_Object_Creation.typ  C.4-Adding_New_Object_Implementations.typ  C.5-Further_Reading.typ  C.6-Exercises.typ
Scripts/: .gitignore  Cargo.toml  convert_exr_to_png.py  html_utils.py  main.py  main_0823.py  merge_en_zh.py  openai_utils.py  pyproject.toml  readme.md  translate_pbrt.py  upload_to_webdav.py
Scripts/python/: .gitignore  html_utils.py  improve.py  main.py  make_typ_file.py  openai_utils.py  translate_pbrt.py
Scripts/python/transformer_typ/: __init__.py
Scripts/src/: lib.rs
Scripts/transformer-typ/: Cargo.toml
Scripts/transformer-typ/src/: lib.rs
chapter-0-Preface/: chapter-0.0-Preface.typ  chapter-0.1-Further_Reading.typ
chapter-1-Introduction/: chapter-1.8-Exercises.typ  (+8 more)
(+128 files in other folders)
